# svelte-htop

client/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
client/src/: app.css
client/src/lib/: system-state.svelte.ts
client/src/lib/components/: cpu-bar.svelte
client/src/routes/: +page.svelte
server/: Cargo.toml
server/src/: main.rs
