[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7",features = ["ws"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
